--- a/demand_server/templates/main.html
+++ b/demand_server/templates/main.html
@@ -1327,7 +1327,9 @@ document.addEventListener('DOMContentLoaded', () => {
      </section>
 
      <!-- 소통섹션 -->
+     <img class="question-card-img" src="{% static 'img/main/question/meeting-room.png' %}" alt="">
 
+</style>
     <div class="communication-section">
         <h2>소통을 하고 싶으신가요?</h2>
         <div class="communication-questions">
@@ -1335,7 +1337,7 @@ document.addEventListener('DOMContentLoaded', () => {
                 <span class="question-category">질문 광장</span>
                 <h3>방 개수가 줄 많으면 가격이 많이 나올까요?</h3>
                 <p>저희 건물 특성상 방 개수가 많아서 좀 걱정이네 전체 다 합해서 ㆍㆍㆍ</p>
-                <img src="{% static 'img/main/question/meeting-room.png' %}" alt="">
+                <img class="question-card-img" src="{% static 'img/main/question/meeting-room.png' %}" alt="">
             </div>
             <div class="question-card">
                 <span class="question-category">질문 광장</span>
